Closed Bug 1024495 Opened 10 years ago Closed 10 years ago

crash in mozilla::net::CacheFileIOManager::GetProfilelessCacheDirectory(nsIFile**)

Categories

(Core :: Networking: Cache, defect)

32 Branch
All
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla33
Tracking Status
firefox30 --- unaffected
firefox31 --- unaffected
firefox32 + fixed
firefox33 --- fixed
b2g-v2.0 --- fixed
b2g-v2.1 --- fixed

People

(Reporter: aaronmt, Assigned: mayhemer)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-ecb76a23-8178-424a-a50b-1b8cf2140610.
=============================================================
A bit strange crash (should not be null), but there is a code path we can get to this state - when the profile initiation fails somewhere...

Null check will do here, we are OK later (I will double check) when this is null.
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
Re-checked we are OK to return null from here.
Attachment #8439309 - Flags: review?(michal.novotny)
Blocks: 961024
Comment on attachment 8439309 [details] [diff] [review]
v1

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 961024
User impact if declined: null deref crash
Testing completed (on m-c, etc.): not even reviewed, soon will land
Risk to taking this patch (and alternatives if risky): zero
String or IDL/UUID changes made by this patch: none
Attachment #8439309 - Flags: approval-mozilla-aurora?
https://tbpl.mozilla.org/?tree=Try&rev=26e093f8d2f1 (andr)
https://tbpl.mozilla.org/?tree=Try&rev=330f96a05bc3 (b2g, since I think ANDROID_WIDGET is defined there as well)
Attachment #8439309 - Flags: review?(michal.novotny) → review+
https://hg.mozilla.org/mozilla-central/rev/be3d8910e738
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Honza - This has now been on m-c for 4 days. Can you comment on the testing that has been conducted on Nightly? Any related bugs come in?
Flags: needinfo?(honzab.moz)
(In reply to Lawrence Mandel [:lmandel] from comment #7)
> Honza - This has now been on m-c for 4 days. Can you comment on the testing
> that has been conducted on Nightly? Any related bugs come in?

Actually, I was not even testing this locally since this is a very straightforward patch (see comment 1.)

No testing and to my knowledge no bugs either.
Flags: needinfo?(honzab.moz)
Comment on attachment 8439309 [details] [diff] [review]
v1

Gotcha. I should have looked at the patch. Approved for Aurora.
Attachment #8439309 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: