Bug 1024495 - crash in mozilla::net::CacheFileIOManager::GetProfilelessCacheDirectory, r=michal